[package]
name = "axum_study_project-1"
version = "0.1.0"
edition = "2021"

[dependencies]
#log
log = "0.4"
env_logger = "0.11"
fern = "0.6"
chrono = { version = "0.4.38", features = ["serde"] }
num-traits = "0.2"

#env
dotenvy = "0.15.7"

#axum
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }

#postgresql
tokio-postgres = "0.7"

#serde
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }